Modified Diagnostic and hover participant files