@@ -194,7 +194,7 @@ public final class PropertiesManagerForJava {
                             hyperlinkedElement, hyperlinkedPosition);
                     List<IJavaDefinitionParticipant> definitions = IJavaDefinitionParticipant.EP_NAME.extensions()
                             .filter(definition -> definition.isAdaptedForDefinition(context))
-                            .collect(Collectors.toList());
+                            .toList();
                     if (definitions.isEmpty()) {
                         return;
                     }
